scribble-test/src/test/resources/bad/syntax/disamb/rolenode/Test02.scr
module bad.syntax.disamb.rolenode.Test02;


global protocol Proto1(role A, role B)
{
	choice at A
	{
		1() from A to B;
		1() from A to C;
	}
	or
	{
		2() from A to B;
		2() from B to C;
	}
}

